hard-gists/2aa18ba3b821b2f580a2/run.log
=== Docker Run Log for 2aa18ba3b821b2f580a2 ===
Started at: Mi 29. Okt 13:24:26 CET 2025

[2025-10-29 13:24:26] START: Running container for 2aa18ba3b821b2f580a2
[2025-10-29 13:24:26] SUCCESS: Container 7c87d2fefabf01286738db0cbb1503652670fa769dd6114363f2e2df96dfebef started for 2aa18ba3b821b2f580a2
=== Container logs for 2aa18ba3b821b2f580a2 ===
  File "/snippet.py", line 173
    print "\n---------------------------"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2aa18ba3b821b2f580a2 ===
[2025-10-29 13:24:28] INFO: Container 7c87d2fefabf01286738db0cbb1503652670fa769dd6114363f2e2df96dfebef has stopped
